# rules_dotnet

./: .bazelrc  .gitattributes  MODULE.bazel  README.md  dotnet-tools.json  paket.dependencies  test.sh
.bazelci/: presubmit.yml
.bcr/: presubmit.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.bazelrc
docs/: BUILD.bazel  README.md  defs.md
dotnet/: BUILD.bazel  defs.bzl  extensions.bzl  paket.paket2bazel_dependencies.bzl  paket.rules_dotnet_dev_nuget_packages.bzl  paket.rules_dotnet_framework_override_not_provided_tests.bzl  paket.rules_dotnet_framework_override_not_provided_tests_extension.bzl  paket.rules_dotnet_nuget_packages.bzl  repositories.bzl  toolchain.bzl
dotnet/private/: BUILD.bazel  common.bzl  launcher.bat.tpl  launcher.sh.tpl  providers.bzl
dotnet/private/rules/common/: BUILD.bazel  attrs.bzl  binary.bzl  compile_info.bzl  library.bzl
dotnet/private/rules/csharp/: BUILD.bazel  binary.bzl
dotnet/private/rules/csharp/actions/: BUILD.bazel  csharp_assembly.bzl
dotnet/private/rules/dotnet_projects/: BUILD.bazel  README.md  dotnet_projects_repo.bzl  nuget_collector.bzl
dotnet/private/rules/fsharp/actions/: BUILD.bazel  fsharp_assembly.bzl
dotnet/private/rules/nuget/: BUILD.bazel  dotnet_tool.bzl  imports.bzl  nuget_archive.bzl  template.BUILD  tool_template.BUILD
dotnet/private/rules/publish_binary/: BUILD.bazel  publish_binary.bzl
dotnet/private/sdk/: versions.bzl
dotnet/private/sdk/apphost_packs/: apphost_pack.bzl  apphost_packs.bzl  dotnet.apphost_packs.bzl
dotnet/private/sdk/crossgen2_packs/: BUILD.bazel  crossgen2_pack.bzl  crossgen2_pack_lookup_table.bzl  crossgen2_pack_transition.bzl  crossgen2_packs.bzl  dotnet.crossgen2_packs.bzl  dotnet.crossgen2_packs_extension.bzl
dotnet/private/sdk/runtime_packs/: BUILD.bazel  dotnet.runtime_packs.bzl  runtime_pack.bzl  runtime_packs.bzl
dotnet/private/sdk/targeting_packs/: dotnet.targeting_packs.bzl  targeting_pack.bzl  targeting_packs.bzl
dotnet/private/tests/: utils.bzl
dotnet/private/tests/analyzer_dependencies/: BUILD.bazel  analyzer_dependencies.bzl
dotnet/private/tests/appsettings/: BUILD.bazel  appsettings.Development.json  appsettings.json
dotnet/private/tests/binary_envs/csharp/: BUILD.bazel  Inherit.cs  Test.cs
dotnet/private/tests/binary_envs/fsharp/: Test.fs
dotnet/private/tests/csharp_library_net48/: BUILD.bazel
dotnet/private/tests/dependency_resolution/conflicting_targeting_pack_deps/: conflicting_targeting_pack_deps.csproj
dotnet/private/tests/dependency_resolution/targeting_pack_nuget_conflict/: BUILD.bazel  tests.bzl
dotnet/private/tests/dotnet_projects/: generator_test.bzl  nuget_collector_test.bzl  parser_test.bzl  tfm_utils_test.bzl
dotnet/private/tests/dotnet_tool/: BUILD.bazel  dotnet_tool_test.bzl
dotnet/private/tests/file_path_with_spaces/: BUILD.bazel  csharp_file_path_with_spaces.bzl  fsharp_file_path_with_spaces.bzl
dotnet/private/tests/file_path_with_spaces/api tests/: test.cs
dotnet/private/tests/file_path_with_spaces/res dir/: data file.txt
dotnet/private/tests/framework_override_not_provided/: BUILD.bazel  program.cs  test.cs
dotnet/private/tests/framework_preprocessor_defines/: BUILD.bazel  framework_preprocessor_defines.bzl
dotnet/private/tests/local_native_library/: BUILD.bazel  native.c  native.def  program.cs  test.cs
dotnet/private/tests/nuget_structure/: BUILD.bazel  common.bzl  resolution.bzl  targetingpacks.bzl
dotnet/private/tests/publish/app_to_publish/: BUILD.bazel  Main.cs
dotnet/private/tests/publish/cross_compilation/: BUILD.bazel  test_file_type_contains.sh
dotnet/private/tests/publish/cross_publish/: tests.bzl
dotnet/private/tests/publish/framework_dependent/: BUILD.bazel  test.sh
dotnet/private/tests/resources/: BUILD.bazel  embedded_resource_path.bzl
dotnet/private/tests/target_runtime/: BUILD.bazel  target_runtime_test.bzl
dotnet/private/tests/toolchain_resolution/: BUILD.bazel
dotnet/private/tests/use_as_tool/fsharp/: BUILD.bazel  relocated_runfiles_test.sh
dotnet/private/tests/use_as_tool/run_shell_rule/: run_shell_rule.bzl
dotnet/private/tools/apphost_shimmer/: BUILD.bazel
dotnet/private/transitions/: BUILD.bazel  apphost_shimmer_transition.bzl  common.bzl  tfm_transition.bzl
e2e/dotnet_projects_net10.0/: BUILD.bazel  MODULE.bazel  paket.dependencies
e2e/dotnet_projects_net10.0/basic_csharp/: BUILD.bazel  MyApp.csproj  MyLibrary.csproj  hello.cs  lib.cs  libtest.cs
e2e/dotnet_projects_net10.0/basic_fsharp/: BUILD.bazel  MyFsApp.fsproj  MyFsLibrary.fsproj  hello.fs  lib.fs  libtest.fs
e2e/dotnet_projects_net8.0/: BUILD.bazel  MODULE.bazel  paket.dependencies  paket.main.bzl
e2e/dotnet_projects_net8.0/basic_csharp/: BUILD.bazel  MyApp.csproj  MyLibrary.csproj  hello.cs  lib.cs  libtest.cs
e2e/dotnet_projects_net8.0/basic_fsharp/: BUILD.bazel  MyFsApp.fsproj  MyFsLibrary.fsproj  hello.fs  lib.fs  libtest.fs
e2e/dotnet_projects_net9.0/: BUILD.bazel  MODULE.bazel
e2e/dotnet_projects_net9.0/basic_csharp/: BUILD.bazel  MyApp.csproj  MyLibrary.csproj  hello.cs  lib.cs  libtest.cs
e2e/dotnet_projects_net9.0/basic_fsharp/: BUILD.bazel  MyFsApp.fsproj  MyFsLibrary.fsproj  hello.fs  lib.fs  libtest.fs
e2e/net10.0/: MODULE.bazel
e2e/net8.0/: .bazelrc  MODULE.bazel
e2e/net8.0/basic_csharp_library_net48/: BUILD.bazel
e2e/net8.0/basic_fsharp_library_net48/: BUILD.bazel
e2e/net9.0/: MODULE.bazel
e2e/smoke/: .bazelrc  MODULE.bazel  internal_dev_deps.bzl
e2e/smoke/basic_csharp/: lib with spaces.cs
e2e/smoke/basic_fsharp/: lib with spaces.fs
e2e/web_sdk/: MODULE.bazel  paket.dependencies  paket.main.bzl
examples/: .bazelrc  MODULE.bazel  dotnet-tools.json
examples/fsharp_signature_files/: BUILD.bazel  domain.fs  domain.fsi  fsharp_signature_files.fsproj
examples/fsharp_type_provider/type_provider_lib/: foo.json
tools/paket2bazel/: README.md
