"rules_dotnet examples"

module(
    name = "rules_dotnet_examples",
    version = "0.0.0",
    compatibility_level = 1,
)

# Only needed to make the Bazel CI RBE config work. Not needed for using rules_dotnet.
bazel_dep(name = "bazel_ci_rules", version = "2.0.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.10", dev_dependency = True)

rbe = use_extension("@bazel_ci_rules//:rbe_config.bzl", "rbe_config_extension", dev_dependency = True)
rbe.config(
    name = "rbe_ubuntu",
    preset = "ubuntu",
)
use_repo(rbe, "rbe_ubuntu")

bazel_dep(name = "rules_dotnet", version = "0.0.0")
local_path_override(
    module_name = "rules_dotnet",
    path = "..",
)

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "10.0.201")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

example_deps_extension = use_extension("//:paket.example_deps_extension.bzl", "example_deps_extension")
use_repo(example_deps_extension, "paket.example_deps")

main_extension = use_extension("//paket/deps:paket.main_extension.bzl", "main_extension")
use_repo(main_extension, "paket.main")

othergroup_extension = use_extension("//paket/deps:paket.othergroup_extension.bzl", "othergroup_extension")
use_repo(othergroup_extension, "paket.othergroup")
