load("@rules_cc//cc:defs.bzl", "cc_library", "cc_shared_library")
load(
    "//dotnet:defs.bzl",
    "csharp_nunit_test",
    "import_library",
)

# Build a trivial library for testing.
cc_library(
    name = "native_static",
    srcs = ["native.c"],
)

# We want only the shared library (and not the static library) to be a dependency of the dotnet
# program.
cc_shared_library(
    name = "native",
    deps = [":native_static"],
)

# Allow that shared library to be imported as a dotnet dependency.
import_library(
    name = "library",
    library_name = "native",
    native = [":native"],
)

# This test uses that native library directly as a dependency to ensure that the `.deps.json`
# properly points to it instead of trying to find it in a NuGet-relative directory.
csharp_nunit_test(
    name = "test",
    size = "small",
    srcs = ["test.cs"],
    target_frameworks = ["net8.0"],
    treat_warnings_as_errors = True,
    deps = [":library"],
)
