load("@bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@rules_dotnet//dotnet:defs.bzl", "publish_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

platform(
    name = "x86_64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "arm64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

publish_binary(
    name = "publish",
    binary = "//dotnet/private/tests/publish/app_to_publish",
    target_framework = "net10.0",
)

platform_transition_binary(
    name = "transitioned_publish_linux_x86_64",
    binary = ":publish",
    target_platform = "x86_64_linux",
)

platform_transition_binary(
    name = "transitioned_publish_linux_arm64",
    binary = ":publish",
    target_platform = "arm64_linux",
)

sh_test(
    name = "test_publish_binary_is_x86_64",
    size = "small",
    srcs = ["test_file_type_contains.sh"],
    args = [
        "$(rlocationpath :transitioned_publish_linux_x86_64)",
        "x86-64",
    ],
    data = [
        ":transitioned_publish_linux_x86_64",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_test(
    name = "test_publish_binary_is_arm64",
    size = "small",
    srcs = ["test_file_type_contains.sh"],
    args = [
        "$(rlocationpath :transitioned_publish_linux_arm64)",
        "aarch64",
    ],
    data = [
        ":transitioned_publish_linux_arm64",
        "@bazel_tools//tools/bash/runfiles",
    ],
)
